# BackupSystem_testing

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  jobs.json  vspkg.json
include/application/: ApplicationFacade.h  BackupService.h  JobService.h  RestoreService.h  StorageService.h
include/domain/: BackupJob.h  BackupType.h  RestorePoint.h  RetentionPolicy.h  Schedule.h
include/dto/: BackupJobDTO.h  JobConverter.h
include/infrastructure/: CompressionService.h  DiffService.h  FileService.h  HashService.h  JobRepository.h  RetentionService.h
src/: main.cpp
src/application/: ApplicationFacade.cpp  BackupService.cpp  JobService.cpp  RestoreService.cpp  StorageService.cpp
src/domain/: BackupJob.cpp  RestorePoint.cpp  RetentionPolicy.cpp  Schedule.cpp
src/dto/: JobConverter.cpp
src/infrastructure/: CompressionService.cpp  DiffService.cpp  FileService.cpp  HashService.cpp  JobRepository.cpp  RetentionService.cpp
src/ui/: jobdialog.cpp  jobdialog.h  jobdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  restoredialog.cpp  restoredialog.h  restoredialog.ui
tests/: CMakeLists.txt  test_ApplicationFacade.cpp  test_BackupJob.cpp  test_BackupService.cpp  test_CompressionService.cpp  test_DiffService.cpp  test_FileService.cpp  test_HashService.cpp  test_JobConverter.cpp  test_JobRepository.cpp  test_JobService.cpp  test_RestorePoint.cpp  test_RestoreService.cpp  test_RetentionPolicy.cpp  test_RetentionService.cpp  test_Schedule.cpp  test_StorageService.cpp  test_scenarios.cpp
